syntax = "proto3";

package massa.api.v1;

import "common.proto";
import "slot.proto";

import "google/api/annotations.proto";
import "google/rpc/status.proto";
import "block.proto";
import "operation.proto";

option cc_enable_arenas = true;
option csharp_namespace = "Massa.Api.V1";
option go_package = "google.golang.org/genproto/massa/api/v1/grpc;grpc";
option java_multiple_files = true;
option java_package = "com.massa.api.v1";
option objc_class_prefix = "GRPC";
option php_namespace = "Massa\\Api\\V1";

// Massa gRPC service
service Grpc {
    // GetDatastoreEntries
    rpc GetDatastoreEntries (GetDatastoreEntriesRequest) returns (GetDatastoreEntriesResponse) {
        option (google.api.http) = {
            post: "/v1/get_datastore_entries"
            body: "*"
        };
    }

    // GetSelectorDraws
    rpc GetSelectorDraws (GetSelectorDrawsRequest) returns (GetSelectorDrawsResponse) {
        option (google.api.http) = {
            post: "/v1/get_selector_draws"
            body: "*"
        };
    }

    // GetVersion
    rpc GetVersion (GetVersionRequest) returns (GetVersionResponse) {
        option (google.api.http) = {get: "/v1/version"};
    }

    // GetTransactionsThroughput
    rpc GetTransactionsThroughput (GetTransactionsThroughputRequest) returns (GetTransactionsThroughputResponse) {
        option (google.api.http) = {get: "/v1/tx"};
    }

    // GetNextBlockBestParents
    rpc GetNextBlockBestParents (GetNextBlockBestParentsRequest) returns (GetNextBlockBestParentsResponse) {
        option (google.api.http) = {get: "/v1/get_next_block_best_parents"};
    }

    rpc GetBlocksBySlot (GetBlocksBySlotRequest) returns (GetBlocksBySlotResponse) {
        option (google.api.http) = {get: "/v1/get_blocks_by_slots"};
    }



    // ███████╗████████╗██████╗ ███████╗ █████╗ ███╗   ███╗
    // ██╔════╝╚══██╔══╝██╔══██╗██╔════╝██╔══██╗████╗ ████║
    // ███████╗   ██║   ██████╔╝█████╗  ███████║██╔████╔██║
    // ╚════██║   ██║   ██╔══██╗██╔══╝  ██╔══██║██║╚██╔╝██║
    // ███████║   ██║   ██║  ██║███████╗██║  ██║██║ ╚═╝ ██║

    // SendBlocks
    rpc SendBlocks (stream SendBlocksRequest) returns (stream SendBlocksResponse) {}

    // SendEndorsements
    rpc SendEndorsements (stream SendEndorsementsRequest) returns (stream SendEndorsementsResponse) {}

    // SendOperations
    rpc SendOperations (stream SendOperationsRequest) returns (stream SendOperationsResponse) {}

    // Subscribe GetTransactionsThroughput
    rpc SubscribeTransactionsThroughput (stream GetTransactionsThroughputStreamRequest) returns (stream GetTransactionsThroughputResponse) {}

    // NewBlocks
    rpc NewBlocks (stream NewBlocksStreamRequest) returns (stream NewBlocksStreamResponse) {}

    // NewBlocksHeaders
    rpc NewBlocksHeaders (stream NewBlocksHeadersStreamRequest) returns (stream NewBlocksHeadersStreamResponse) {}
    
    // NewFilledBlocks
    rpc NewFilledBlocks (stream NewFilledBlocksStreamRequest) returns (stream NewFilledBlocksStreamResponse) {}

    // NewOperations
    rpc NewOperations (stream NewOperationsStreamRequest) returns (stream NewOperationsStreamResponse) {}
}

// NewBlocksStreamRequest holds request for NewBlocksStream
message NewBlocksStreamRequest {
    // string value
    string id = 1;
}

// NewBlocksStreamResponse holds response from NewBlocksStream
message NewBlocksStreamResponse {
    // string value
    string id = 1;
    // object value
    Block block = 2;
}

// NewBlocksHeadersStreamRequest holds request for NewBlocksHeadersStream
message NewBlocksHeadersStreamRequest {
    // string value
    string id = 1;
}

// NewBlocksHeadersStreamResponse holds response from NewBlocksHeadersStream
message NewBlocksHeadersStreamResponse {
    // string value
    string id = 1;
    // object value
    SecureShareBlockHeader block_header = 2;
}

// NewFilledBlocksStreamRequest holds request for NewFilledBlocksStream
message NewFilledBlocksStreamRequest {
    // string value
    string id = 1;
}

// NewFilledBlocksStreamResponse holds response from NewFilledBlocksStream
message NewFilledBlocksStreamResponse {
    // string value
    string id = 1;
    // object value
    FilledBlock block = 2;
}

// NewOperationsStreamRequest holds request for NewOperationsStream
message NewOperationsStreamRequest {
    // string value
    string id = 1;
    // object value
    repeated OperationStreamFilterType filter = 2;
}

// NewOperationsStreamResponse holds response from NewOperationsStream
message NewOperationsStreamResponse {
    // string value
    string id = 1;
    // object value
    SecureShareOperation operation = 2;
}

// GetBlocksBySlotRequest holds request for GetBlocksBySlot
message GetBlocksBySlotRequest {
    // string value
    string id = 1;
    // slots
    repeated Slot slots = 2;
}

// GetBlocksBySlotResponse holds response from GetBlocksBySlot
message GetBlocksBySlotResponse {
    // string value
    string id = 1;
    // blocks
    repeated Block blocks = 2;
}

message GetTransactionsThroughputRequest {
    // string value
    string id = 1;
}

// GetTransactionsThroughputStreamRequest holds request for GetTransactionsThroughputStream
message GetTransactionsThroughputStreamRequest {
    // string value
    string id = 1;
    // optional timer interval in sec
    optional fixed64 interval = 2;
}

// GetTransactionsThroughputResponse holds response from GetTransactionsThroughput
message GetTransactionsThroughputResponse {
    // string value
    string id = 1;
    // tx/s
    fixed32 tx_s = 2;
}

// GetNextBlockBestParentsRequest holds request for GetNextBlockBestParents
message GetNextBlockBestParentsRequest {
    // string value
    string id = 1;
}

// GetNextBlockBestParentsResponse holds response from GetNextBlockBestParents
message GetNextBlockBestParentsResponse {
    // string value
    string id = 1;
    // best parents
    repeated BestParentTuple data = 2;
}

// Best Parent Tuple
message BestParentTuple {
    // string value
    string blockId = 1;
    // fixed64 value
    fixed64 period = 2;
}

// GetDatastoreEntriesRequest holds request from GetDatastoreEntries
message GetDatastoreEntriesRequest {
    // string value
    string id = 1;
    // object value
    repeated DatastoreEntriesQuery queries = 2;
}

// DatastoreEntries Query
message DatastoreEntriesQuery {
    // object value
    DatastoreEntryFilter filter = 1;
}

message DatastoreEntryFilter {
    /// associated address of the entry
    string address = 1;
    // datastore key
    bytes key = 2;
}

// GetDatastoreEntriesResponse holds response from GetDatastoreEntries
message GetDatastoreEntriesResponse {
    // string value
    string id = 1;
    // object value
    repeated BytesMapFieldEntry entries = 2;
}

// GetSelectorDrawsRequest holds request from GetSelectorDraws
message GetSelectorDrawsRequest {
    // string value
    string id = 1;
    // object value
    repeated SelectorDrawsQuery queries = 2;
}

// SelectorDraws Query
message SelectorDrawsQuery {
    // object value
    SelectorDrawsFilter filter = 1;
}
// SelectorDraws Filter
message SelectorDrawsFilter {
    // string value
    string address = 1;
}

// GetSelectorDrawsResponse holds response from GetSelectorDraws
message GetSelectorDrawsResponse {
    // string value
    string id = 1;
    // object value
    repeated SelectorDraws selector_draws = 2;
}

// SelectorDraws
message SelectorDraws {
    // string value
    string address = 1;
    // object value
    repeated Slot next_block_draws = 2;
    // object value
    repeated IndexedSlot next_endorsement_draws = 3;
}

// GetVersionRequest holds request from GetVersion
message GetVersionRequest {
    // string value
    string id = 1;
    // string field
    string version = 2;
}

// GetVersionResponse holds response from GetVersion
message GetVersionResponse {
    // string value
    string id = 1;
    // string field
    string version = 2;
}

// SendBlocksRequest holds parameters to SendBlocks
message SendBlocksRequest {
    // string value
    string id = 1;
    // object field
    SecureSharePayload block = 2;
}

// SendBlocksResponse holds response from SendBlocks
message SendBlocksResponse {
    // string value
    string id = 1;
    // object field
    oneof result {
        BlockResult ok = 2;
        google.rpc.Status error = 3;
    }
}

// Holds Block response
message BlockResult {
    // string field
    string id = 1;
}

// SendEndorsementsRequest holds parameters to SendEndorsements
message SendEndorsementsRequest {
    // string field
    string id = 1;
    // object field
    repeated SecureSharePayload endorsements = 2;
}

// SendEndorsementsResponse holds response from SendEndorsements
message SendEndorsementsResponse {
    // string field
    string id = 1;
    // object field
    oneof message {
        EndorsementResult result = 2;
        google.rpc.Status error = 3;
    }
}

// Holds Endorsement response
message EndorsementResult {
    // string field
    repeated string ids = 1;
}

// SendOperationsRequest holds parameters to SendOperations
message SendOperationsRequest {
    // string field
    string id = 1;
    // object field
    repeated SecureSharePayload operations = 2;
}

// SendOperationsResponse holds response from SendOperations
message SendOperationsResponse {
    // string field
    string id = 1;
    // object field
    oneof message {
        OperationResult result = 2;
        google.rpc.Status error = 3;
    }
}

// Holds Operation response
message OperationResult {
    // string field
    repeated string ids = 1;
}
